[tool.poetry]
name = "event-bus"
version = "0.1.0"
description = "Asynchronous event bus."
authors = ["remimd"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/remimd/event-bus"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
